tests/snapshots/scenarios/048_search_strat_path_fuzzy_handles_duplicate_headings-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_match_strategies",
  "files": [
    "result.json"
  ],
  "scenario_id": "048_search_strat_path_fuzzy_handles_duplicate_headings",
  "status": "validated"
}
