tests/snapshots/scenarios/049_search_strat_path_fuzzy_ignores_fenced_headings-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_match_strategies",
  "files": [
    "result.json"
  ],
  "scenario_id": "049_search_strat_path_fuzzy_ignores_fenced_headings",
  "status": "validated"
}
