tests/snapshots/scenarios/050_search_strat_path_fuzzy_prefers_path_and_section-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_match_strategies",
  "files": [
    "result.json"
  ],
  "scenario_id": "050_search_strat_path_fuzzy_prefers_path_and_section",
  "status": "validated"
}
