tests/snapshots/scenarios/051_search_strat_regex_strategy-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_match_strategies",
  "files": [
    "result.json"
  ],
  "scenario_id": "051_search_strat_regex_strategy",
  "status": "validated"
}
