tests/snapshots/scenarios/052_seed_journal_semantic_pull_surfaces_agenda-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "seed_and_priors",
  "files": [
    "result.json"
  ],
  "scenario_id": "052_seed_journal_semantic_pull_surfaces_agenda",
  "status": "validated"
}
