tests/snapshots/scenarios/053_seed_seed_accuracy_cluster_grounded-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "seed_and_priors",
  "files": [
    "result.json"
  ],
  "scenario_id": "053_seed_seed_accuracy_cluster_grounded",
  "status": "validated"
}
