tests/snapshots/scenarios/055_sem_policy_parse_directives-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "semantic_policy",
  "files": [
    "result.json"
  ],
  "scenario_id": "055_sem_policy_parse_directives",
  "status": "no_input"
}
