tests/snapshots/scenarios/056_sem_policy_planned_payload-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "semantic_policy",
  "files": [
    "result.json"
  ],
  "scenario_id": "056_sem_policy_planned_payload",
  "status": "validated"
}
