tests/snapshots/scenarios/057_tree_scope_mixed_scope_collapse_toggle-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "tree_scope_filters",
  "files": [
    "result.json"
  ],
  "scenario_id": "057_tree_scope_mixed_scope_collapse_toggle",
  "status": "validated"
}
