tests/snapshots/scenarios/059_tree_scope_semantic_edges_restrict_section_scope-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "tree_scope_filters",
  "files": [
    "result.json"
  ],
  "scenario_id": "059_tree_scope_semantic_edges_restrict_section_scope",
  "status": "validated"
}
